--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hwa-in website",
+  "name": "hwa-in-website",
   "private": true,
   "description": "An e-commerce website",
   "version": "0.1.0",
