--- a/package.json
+++ b/package.json
@@ -1,41 +1,59 @@
 {
-  "name": "hwa-in-website",
-  "private": true,
-  "description": "An e-commerce website",
-  "version": "0.1.0",
-  "author": "Andrew Locke <alocke12992@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.0.82",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-stripe": "^1.2.0",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-source-stripe": "^2.1.2",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+  "name": "gatsby-contentful-starter",
+  "description": "Starter Contentful Gatsby Blog",
+  "version": "1.0.0",
+  "author": "Stefan Judis <stefanjudis@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/contentful-userland/gatsby-contentful-starter/issues"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "yarn develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  "dependencies": {
+    "gatsby-image": "^2.0.13",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-source-contentful": "^2.0.2",
+    "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.0.6",
+    "lodash": "^4.17.11",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
+    "sharp": "^0.21.0"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "babel-eslint": "^10.0.1",
+    "chalk": "^2.4.1",
+    "contentful-import": "^7.4.0",
+    "eslint": "^5.6.1",
+    "eslint-plugin-react": "^7.11.1",
+    "gatsby": "^2.0.18",
+    "gh-pages": "^2.0.1",
+    "inquirer": "^6.2.0",
+    "prettier": "^1.14.3",
+    "rimraf": "^2.6.2",
+    "yargs-parser": "^11.0.0"
   },
+  "homepage": "https://github.com/contentful-userland/gatsby-contentful-starter#readme",
+  "keywords": [
+    "gatsby",
+    "contentful"
+  ],
+  "license": "MIT",
+  "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hwa-in/website"
+    "url": "git+https://github.com/contentful-userland/gatsby-contentful-starter.git"
+  },
+  "scripts": {
+    "dev": "gatsby develop",
+    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md' 'bin/*.js'",
+    "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix *.js bin/*.js",
+    "postinstall": "node ./bin/hello.js",
+    "setup": "node ./bin/setup.js",
+    "heroku-postbuild": "gatsby build",
+    "cleanup-repository": "rimraf bin contentful && yarn remove contentful-import chalk inquirer rimraf "
   }
 }
