--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "sharp": "^0.21.0",
-    "stripe": "^6.23.0"
+    "stripe": "^6.23.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
