--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-sharp": "^2.0.6",
     "gatsby-plugin-stripe": "^1.2.0",
     "gatsby-source-contentful": "^2.0.2",
+    "gatsby-source-filesystem": "^2.0.20",
     "gatsby-source-stripe": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.0.6",
