--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Andrew Locke <alocke12992@gmail.com>",
   "dependencies": {
     "gatsby-image": "^2.0.13",
+    "gatsby-plugin-layout": "^1.0.12",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.6",
