--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.6",
     "gatsby-plugin-stripe": "^1.2.0",
+    "gatsby-remark-embed-video": "^1.7.0",
     "gatsby-source-contentful": "^2.0.2",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-source-stripe": "^2.1.6",
