--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "react": "^16.5.2",
+    "react-alice-carousel": "^1.13.1",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-responsive-carousel": "^3.1.47",
     "react-transition-group": "^2.5.3",
     "sharp": "^0.21.0",
     "styled-components": "^4.1.3"
