--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-alice-carousel": "^1.13.1",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.4.0",
     "react-responsive-carousel": "^3.1.47",
     "react-transition-group": "^2.5.3",
     "sharp": "^0.21.0",
