--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-carousel": "^3.1.47",
     "react-transition-group": "^2.5.3",
     "sharp": "^0.21.0",
+    "sine-waves": "^0.3.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
