--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Andrew Locke <alocke12992@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "gatsby-image": "^2.0.13",
     "gatsby-plugin-layout": "^1.0.12",
     "gatsby-plugin-react-helmet": "^3.0.0",
