Update netlify.toml with npm run instead of yarn

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   ID = "09699e3b-0489-4fed-ada5-a15533897bc8"
 
 [build]
-  command = "yarn run build"
+  command = "npm run build"
   publish = "public"
 
 [build.environment]
