Adds step to build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
   ID = "09699e3b-0489-4fed-ada5-a15533897bc8"
 
 [build]
-  command = "npm run build"
-  publish = "public"
+  command = "npm rebuild sharp gatsby-plugin-sharp gatsby-transformer-sharp && npm run build"
+  publish = "public/"
 
 [build.environment]
   YARN_FLAGS = "--no-ignore-optional"
