Adds step to build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   ID = "09699e3b-0489-4fed-ada5-a15533897bc8"
 
 [build]
-  command = "npm rebuild sharp gatsby-plugin-sharp gatsby-transformer-sharp && npm run build"
+  command = "npm install && npm rebuild sharp gatsby-plugin-sharp gatsby-transformer-sharp && npm run build"
   publish = "public/"
 
 [build.environment]
