--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-remark-embed-video": "^1.7.0",
     "gatsby-source-contentful": "^2.0.2",
     "gatsby-source-filesystem": "^2.0.20",
