--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.4.0",
+    "react-material-ui-form-validator": "^2.0.7",
     "react-media": "^1.9.2",
     "react-responsive-carousel": "^3.1.47",
     "react-transition-group": "^2.5.3",
