Adds responsive lazy load images

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-fonts": "^0.0.4",
+    "gatsby-plugin-jss": "^2.0.9",
     "gatsby-plugin-layout": "^1.0.12",
     "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -27,6 +28,7 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.4.0",
+    "react-jss": "^8.6.1",
     "react-material-ui-form-validator": "^2.0.7",
     "react-media": "^1.9.2",
     "react-responsive-carousel": "^3.1.47",
