--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "version": "1.0.0",
   "author": "Andrew Locke <alocke12992@gmail.com>",
   "dependencies": {
+    "@babel/core": "^7.4.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "babel-core": "^6.26.3",
+    "babel-plugin-react-css-modules": "^5.2.1",
+    "babel-plugin-styled-components": "^1.10.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-gatsby": "^0.1.9",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-jss": "^2.0.9",
