--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-gatsby": "^0.1.9",
+    "eslint-config-react-app": "^3.0.8",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-jss": "^2.0.9",
