--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Andrew Locke <alocke12992@gmail.com>",
   "dependencies": {
     "@babel/core": "^7.4.0",
+    "@hot-loader/react-dom": "^16.8.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "babel-core": "^6.26.3",
